cabal-version:      2.4
name:               onyx
version:            0.1.0.0
license:            MIT
copyright:          2022 Sridhar Ratnakumar
maintainer:         srid@srid.ca
author:             Sridhar Ratnakumar
category:           Web

-- TODO: Before hackage release.
-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

extra-source-files:
  LICENSE
  README.md

common shared
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude

  default-extensions:
    NoStarIsType
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTSyntax
    GeneralisedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NumericUnderscores
    OverloadedStrings
    PolyKinds
    PostfixOperators
    QuasiQuotes
    RankNTypes
    RecordWildCards
    RecursiveDo
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  build-depends:
    , aeson
    , async
    , base              >= 4.13.0.0 && <4.18.0.0.0
    , base64-bytestring ==  1.2.1.0
    , blaze-html        == 0.9.1.2
    , bytestring        ==  0.11.3.1
    , containers        ==  0.6.5.1
    , conduit           ==  1.3.4.3
    , conduit-extra     ==  1.3.6
    , data-default
    , directory
    , filepath
    , mtl
    , optics-core
    , profunctors
    , reactive-banana     ==  1.3.2.0
    , relude              >=  1.0
    , servant             == 0.19.1
    , servant-blaze       == 0.9.1
    , servant-server      == 0.19.2
    , servant-websockets  == 2.0.0
    , shower
    , stm                 ==  2.5.0.2
    , stm-conduit
    , text                ==  1.2.5.0
    , time
    , uuid 
    , warp                == 3.3.24
    , websockets          ==  0.12.7.3
    , with-utf8
    , word8               ==  0.1.3

  default-language:   Haskell2010

library 
    import: shared  
    hs-source-dirs:   src
    
    exposed-modules:  Agent
                    , Domain.Agent
                    , Domain.Game
                    , Domain.Planet
                    , Domain.Resources
                    , Protocol
                    , Protocol.Protocol
                    , AppServer 
                    , GameServer.Server

executable onyx-exe 
  import:  shared
  hs-source-dirs: src 
  main-is: Main.hs
  other-modules:  AppServer
                  , Agent
                  , Domain.Agent
                  , Domain.Planet
                  , Domain.Resources
                  , Protocol
                  , Protocol.Protocol


